@@ -2,6 +2,8 @@ PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, Version 4.3.8
 - Updated PCRE to provide better error handling in certain cases. (Andrei)
+- NSAPI: added "bucket" parameter to list of non-php.ini-keys of php4_execute
+  for doing performance stats without warnings in server-log. (Uwe Schindler)
 - Fixed bug #28868 (Internal wrapper registry not thread safe). (Sara)
 - Fixed bug #28818 (Apache 2 sapis do not export st_dev).
   (xuefer at 21cn dot com, Ilia).
